Added common header and footer

--- a/index.html
+++ b/index.html
@@ -1,34 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Trampoline Canada</title>
-		<link rel="stylesheet" type="text/css" href="../Website_Data/style.css">
-		<link rel="shortcut icon" type="image/x-icon" href="../Website_Data/GymCan_Favicon.ico"/>
-		<link rel="apple-touch-icon" href="../Website_Data/GymCan_Apple_Icon.png"/>
+		<title>Trampoline Canada - Useful Links</title>
+		<link rel="stylesheet" type="text/css" href="/Website_Data/style.css">
+		<link rel="shortcut icon" type="image/x-icon" href="/Website_Data/GymCan_Favicon.ico"/>
+		<link rel="apple-touch-icon" href="/Website_Data/GymCan_Apple_Icon.png"/>
 	</head>
  	<body>
-		<div class="header">
-			<br>
-			<center>
-				<table>
-					<tr>
-						<th><img src="../Website_Data/GymCan_Logo.png" style="vertical-align: middle;" width=125/></th>
-						<th><span class="header_title">Trampoline Canada</span><br><p>Unofficial Documents for Trampoline Gymnastics in Canada</p></th>
-					</tr>
-				</table>
-				<table style="width:70%">
-					<tr>
-						<nav>
-							<td><a href="https://trampolinecanada.github.io/">Home</a></td>
-							<td><a href="https://trampolinecanada.github.io/RankingLists/">Ranking Lists</a></td>
-							<td><a href="https://trampolinecanada.github.io/DDSheets/">DD Sheets</a></td>
-							<td><a href="https://trampolinecanada.github.io/UsefulLinks">Useful Links</a></td>
-						</nav>
-					</tr>
-				</table>
-			</center>
-			<br>
-		</div>
+		<script language="javascript" type="text/javascript" src="/Website_Data/header.txt"></script>
 		<div class="body">
 			<div class="body_area">
 				<br>
@@ -50,10 +29,6 @@
 				<br>
 			</div>
 		</div>
-		<div class="footer">
-			<p>Maintained by Trevor Stirling
-				<span style="float:right;"><a href="mailto:trevorjamesstirling@gmail.com">Email</a> me with any comments or errors</span>
-			</p>
-		</div>
+		<script language="javascript" type="text/javascript" src="/Website_Data/footer.txt"></script>
 	</body>
 </html>
