Updated header and added analytics

--- a/index.html
+++ b/index.html
@@ -2,12 +2,21 @@
 <html>
 	<head>
 		<title>Trampoline Canada - Useful Links</title>
-		<link rel="stylesheet" type="text/css" href="/Website_Data/style.css">
-		<link rel="shortcut icon" type="image/x-icon" href="/Website_Data/GymCan_Favicon.ico"/>
-		<link rel="apple-touch-icon" href="/Website_Data/GymCan_Apple_Icon.png"/>
+		<base href = "https://trampolinecanada.github.io/" />
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-166809017-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		  gtag('config', 'UA-166809017-1');
+		</script>
+		<link rel="stylesheet" type="text/css" href="Website_Data/style.css">
+		<link rel="shortcut icon" type="image/x-icon" href="Website_Data/GymCan_Favicon.ico"/>
+		<link rel="apple-touch-icon" href="Website_Data/GymCan_Apple_Icon.png"/>
 	</head>
  	<body>
-		<script language="javascript" type="text/javascript" src="/Website_Data/header.txt"></script>
+		<script language="javascript" type="text/javascript" src="Website_Data/header.txt"></script>
+		<script>document.getElementById("Useful Links").style.color = "#D72128";</script>
 		<div class="body">
 			<div class="body_area">
 				<br>
@@ -25,10 +34,11 @@
 					<a href="https://mygameplan.ca">Game Plan</a><br>
 					<a href="https://www.globaldro.com/CA/search">Global Dro</a><br>
 					<a href="https://gymcan.photoshelter.com">GymCan Photos</a><br>
+					<a href="https://ddwall.github.io">International DD Wall</a>
 				</p>
 				<br>
 			</div>
 		</div>
-		<script language="javascript" type="text/javascript" src="/Website_Data/footer.txt"></script>
+		<script language="javascript" type="text/javascript" src="Website_Data/footer.txt"></script>
 	</body>
 </html>
