--- a/index.html
+++ b/index.html
@@ -24,9 +24,20 @@
 					<a href="http://gymcan.org/disciplines/trampoline/results">GymCan</a><br>
 					<a href="https://www.gymnastics.sport/site/rankings/ranking_tra.php">FIG World Rankings</a><br>
 					<a href="https://sporttech.io/explore">SportTech</a><br>
+					<a href="https://sportzsoftlivemeet.com/find-meet">SportzSoft</a><br>
 				</p>
 				<p><span class="body_title">Rules</span><br>
-					<a href="http://gymcan.org/disciplines/trampoline/technical-information/technical-documents">GymCan Technical Documents</a><br>
+
+					<a href="http://gymcan.org/disciplines/trampoline/technical-information/technical-documents">GymCan Technical Documents</a> -  Currently Down, see documents below:<br>
+					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/master/2023%20TG%20Competition%20Regulations%20(EN).pdf">2023 TG Competition Regulations (EN)</a> - March 2023<br>
+					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/master/2023%20TG%20Reglements%20De%20Competition%20(FR).pdf">2023 TG R&egrave;glements De Comp&eacute;tition (FR)</a> - mars 2023<br>
+					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/master/2023%20TG%20Canadian%20Pathways%20(EN).pdf">2023 TG Canadian Pathways (EN)</a> - February 2023<br>
+					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/master/2023%20TG%20Programme%20De%20Cheminement%20Canadien%20(FR).pdf">2023 TG Programme De Cheminement Canadien (FR)</a> - f&eacute;vrier 2023<br>
+					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/master/2023%20National%20Team%20Selection%20(EN).pdf">2023 National Team Selection (EN)</a> - March 2023<br>
+					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/master/2023%20Processus%20De%20Selection%20De%20L'Equipe%20Nationale%20(FR).pdf">2023 Processus De S&eacute;lection De L'&Eacute;quipe Nationale (FR)</a> - mars 2023<br>
+					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/master/2023%20TG%20WAGC%20Selection%20Criteria%20(EN).pdf">2023 TG WAGC Selection Criteria (EN)</a> - March 2023<br>
+					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/master/2023%20TG%20WAGC%20Processus%20De%20Selection%20(EN).pdf">2023 TG WAGC Processus De S&eacute;lection (FR)</a> - mars 2023<br>
+					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/master/2023%20Qualifying%20Standards.pdf">2023 Qualifying Standards/Standards De Qualification</a> - February/f&eacute;vrier 2023<br>
 					<a href="https://www.gymnastics.sport/site/rules/rules.php#7">FIG Technical Documents</a><br>
 				</p>
 				<p><span class="body_title">Resources</span><br>
