--- a/index.html
+++ b/index.html
@@ -29,19 +29,17 @@
 				<p><span class="body_title">Rules</span><br>
 
 					<a href="http://gymcan.org/disciplines/trampoline/technical-information/technical-documents">GymCan Technical Documents</a> -  Currently Down, see documents below:<br>
-					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2023%20TG%20Competition%20Regulations%20(EN).pdf">2023 TG Competition Regulations (EN)</a> - March 2023<br>
-					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2023%20TG%20Reglements%20De%20Competition%20(FR).pdf">2023 TG R&egrave;glements De Comp&eacute;tition (FR)</a> - mars 2023<br>
-					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2023%20TG%20Canadian%20Pathways%20(EN).pdf">2023 TG Canadian Pathways (EN)</a> - February 2023<br>
-					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2023%20TG%20Programme%20De%20Cheminement%20Canadien%20(FR).pdf">2023 TG Programme De Cheminement Canadien (FR)</a> - f&eacute;vrier 2023<br>
-					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2023%20National%20Team%20Selection%20(EN).pdf">2023 National Team Selection (EN)</a> - March 2023<br>
-					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2023%20Processus%20De%20Selection%20De%20L'Equipe%20Nationale%20(FR).pdf">2023 Processus De S&eacute;lection De L'&Eacute;quipe Nationale (FR)</a> - mars 2023<br>
-					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2023%20TG%20WAGC%20Selection%20Criteria%20(EN).pdf">2023 TG WAGC Selection Criteria (EN)</a> - March 2023<br>
-					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2023%20TG%20WAGC%20Processus%20De%20Selection%20(FR).pdf">2023 TG WAGC Processus De S&eacute;lection (FR)</a> - mars 2023<br>
+					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2024%20TG%20Competition%20Regulations%20(EN).pdf">2024 TG Competition Regulations (EN)</a> - February 6, 2024<br>
+					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2023%20TG%20Reglements%20De%20Competition%20(FR).pdf">2023 TG R&egrave;glements De Comp&eacute;tition (FR)</a> - mars 2023 (2024 not yet translated)<br>
+					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2024%20TG%20Canadian%20Pathways%20(EN).pdf">2024 TG Canadian Pathways (EN)</a> - February 6, 2024<br>
+					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2024%20TG%20Programme%20De%20Cheminement%20Canadien%20(FR).pdf">2024 TG Programme De Cheminement Canadien (FR)</a> - 6 f&eacute;vrier 2024<br>
+					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2024%20National%20Team%20Selection%20(EN).pdf">2024 National Team Selection (EN)</a> - February 6, 2024<br>
+					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2024%20Processus%20De%20Selection%20De%20L'Equipe%20Nationale%20(FR).pdf">2024 Processus De S&eacute;lection De L'&Eacute;quipe Nationale (FR)</a> - 6 f&eacute;vrier 2024<br>
 					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2024%20Olympic%20Games%20Selection%20Process%20(EN).pdf">2024 Olympic Games Selection Process (EN)</a> - July 2023<br>
 					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2024%20Jeux%20Olympiques%20Processus%20De%20Selection%20(FR).pdf">2024 Jeux Olympiques Processus De S&eacute;lection (FR)</a> - juillet 2023<br>
-					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2023%20Qualifying%20Standards.pdf">2023 Qualifying Standards/Standards De Qualification</a> - February/f&eacute;vrier 2023<br>
+					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2024%20Qualifying%20Standards.pdf">2024 Qualifying Standards/Standards De Qualification</a> - February 6/6 f&eacute;vrier 2024<br>
 					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2024%20AAP%20Carding%20Criteria%20(EN).pdf">2024 AAP Carding Criteria (EN)</a> - January 2023<br>
-					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2024%20PAA%20Processus%20D’Octroi%20Des%20Brevets%20(FR).pdf">2024 PAA Processus D’Octroi Des Brevets (FR)</a> - janvier 2023<br>
+					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2024%20PAA%20Processus%20D'Octroi%20Des%20Brevets%20(FR).pdf">2024 PAA Processus D'Octroi Des Brevets (FR)</a> - janvier 2023<br>
 					<a href="https://www.gymnastics.sport/site/rules/rules.php#7">FIG Technical Documents</a><br>
 				</p>
 				<p><span class="body_title">Resources</span><br>
