--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2024%20Olympic%20Games%20Selection%20Process%20(EN).pdf">2024 Olympic Games Selection Process (EN)</a> - July 2023<br>
 					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2024%20Jeux%20Olympiques%20Processus%20De%20Selection%20(FR).pdf">2024 Jeux Olympiques Processus De S&eacute;lection (FR)</a> - juillet 2023<br>
 					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2024%20Qualifying%20Standards.pdf">2024 Qualifying Standards/Standards De Qualification</a> - February 6/6 f&eacute;vrier 2024<br>
-					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2024%20AAP%20Carding%20Criteria%20(EN).pdf">2024 AAP Carding Criteria (EN)</a> - January 2023<br>
-					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2024%20PAA%20Processus%20D'Octroi%20Des%20Brevets%20(FR).pdf">2024 PAA Processus D'Octroi Des Brevets (FR)</a> - janvier 2023<br>
-					<a href="https://www.gymnastics.sport/site/rules/rules.php#7">FIG Technical Documents</a><br>
+					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2024%20AAP%20Carding%20Criteria%20(EN).pdf">2025 AAP Carding Criteria (EN)</a> - January 8, 2024<br>
+					&#8226; <a href="https://github.com/trampolinecanada/usefullinks/raw/main/2024%20PAA%20Processus%20D'Octroi%20Des%20Brevets%20(FR).pdf">2025 PAA Processus D'Octroi Des Brevets (FR)</a> - 8 janvier 2024<br>
+					<a href="https://www.gymnastics.sport/site/rules/#7">FIG Technical Documents</a><br>
 				</p>
 				<p><span class="body_title">Resources</span><br>
 					<a href="https://www.dartfish.tv/Login">Dartfish</a><br>
