TOF Calculator Website Links

--- a/index.html
+++ b/index.html
@@ -38,9 +38,15 @@
 					<a href="https://gymcan.photoshelter.com">GymCan Photos</a><br>
 					<a href="https://ddwall.github.io">International DD Wall</a>
 				</p>
+				<p><span class="body_title">Applets</span><br>
+					TOF Calculator - <a href="https://github.com/trampolinecanada/usefullinks/raw/main/TOF%20Calculator.zip">(Mac)</a> <a href="https://github.com/trampolinecanada/usefullinks/raw/main/TOF%20Calculator.exe">(Windows)</a> <a href="https://github.com/trampolinecanada/usefullinks/raw/main/TOF%20Calculator.py">(Python Raw)</a><br>
+					<span>Note: On Mac, must right click > open on first run</span>
+				</p>
 				<br>
 			</div>
 		</div>
 		<script language="javascript" type="text/javascript" src="Website_Data/footer.txt"></script>
 	</body>
 </html>
+
+https://github.com/trampolinecanada/usefullinks/tree/main/TOF%20Calculator.app/Contents
