Added DD Helper

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 					<a href="https://ddwall.github.io">International DD Wall</a>
 				</p>
 				<p><span class="body_title">Applets</span><br>
-					TOF Calculator - <a href="https://github.com/trampolinecanada/usefullinks/raw/main/TOF%20Calculator.zip">(Mac)</a> <a href="https://github.com/trampolinecanada/usefullinks/raw/main/TOF%20Calculator.exe">(Windows)</a> <a href="https://github.com/trampolinecanada/usefullinks/raw/main/TOF%20Calculator.py">(Python Raw)</a><br>
+					TOF Calculator - Version 1.0 <a href="https://github.com/trampolinecanada/usefullinks/raw/main/TOF%20Calculator.zip">(Mac)</a> <a href="https://github.com/trampolinecanada/usefullinks/raw/main/TOF%20Calculator.exe">(Windows)</a> <a href="https://github.com/trampolinecanada/usefullinks/raw/main/TOF%20Calculator.py">(Python Raw)</a><br>
+					DD Helper - Version 1.0 <a href="https://github.com/trampolinecanada/usefullinks/raw/main/DD%20Helper.zip">(Mac)</a> <a href="https://github.com/trampolinecanada/usefullinks/raw/main/DD%20Helper.exe">(Windows)</a> <a href="https://github.com/trampolinecanada/usefullinks/raw/main/DD%20Helper.py">(Python Raw)</a><br>
 					<span>Note: On Mac, must right click > open on first run</span>
 				</p>
 				<br>
